# reservations

./: .gitignore  README.rst  TESTING_WTT3.md  pyproject.toml  test_mock_import.py
src/reservations/: models.py  tests.py
src/reservations.egg-info/: SOURCES.txt  requires.txt
src/reservations/management/commands/: import_wtt3.py
src/reservations/migrations/: 0007_add_external_id_to_reservation.py
src/reservations/wtt3/: __init__.py  importer.py
