[build-system]
requires = ["setuptools >= 80.9.0", "setuptools_scm >= 9.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "reservations"
description = "Open source reservation system written in Django"
authors = [{ name = "Gregor Jerše", email = "gregor@jerse.info" }, { name = "Gašper Fele-Žorž", email = "polz@not.si" }]
dynamic = ["version"]
readme = "README.rst"
license = "GPL-3.0-or-later"
requires-python = ">=3.13, <3.15"
keywords = ["reservations", "FRI", "university", "api", "django", "rest-framework"]
classifiers = [
        "Development Status :: 5 - Production",
        "Environment :: Web Environment",
        "Framework :: Django",
        "Intended Audience :: Developers",
        "Topic :: Internet :: WWW/HTTP",
        "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
        "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
        "Topic :: Software Development :: Libraries :: Application Frameworks",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
]

dependencies = [
    "Django~=5.2.8",
    "django-guardian~=3.2.0",
    "djangorestframework~=3.16.1",
    "django-filter~=25.2",
    "django-autocomplete-light~=3.12.1",
    "django-debug-toolbar~=6.1.0",
    "requests~=2.32.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary] ~= 3.2.12"]
docs = ["sphinx", "sphinx-pyproject"]
package = ["twine", "build"]
test = ["ruff", "pytest-cov"]
devel = ["ipython", "types-tqdm", ]
[project.urls]
repository = "https://github.com/UL-FRI/reservations"
documentation = "https://github.com/UL-FRI/reservations"

[tool.setuptools_scm]